Add min dfa creator