@@ -1,7 +1,6 @@
 package validator;
 
 import fa.Automata;
-import fa.state.DfaState;
 import fa.state.State;
 import util.CollectionUtils;
 
@@ -9,12 +8,12 @@ import java.util.List;
 
 public class DfaSequenceValidator {
 
-    public static boolean validate(Automata<DfaState> dfa, String inputString) {
+    public static boolean validate(Automata<State> dfa, String inputString) {
         if (dfa.getStates().isEmpty()) {
             return inputString.isEmpty();
         }
 
-        State state = dfa.getStates().getFirst();
+        State state = dfa.getStartStates().get(0);
         if (inputString.isEmpty()) {
             // if the first is state is final state, so empty string is valid
             return state.isFinalState();
